--- a/dl_study/ActivationFunction.ipynb
+++ b/dl_study/ActivationFunction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.math import exp, maximum\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "source": [
     "# Activation in Dense Layer\n",
     "from tensorflow.keras.layers import Dense\n",
@@ -158,9 +158,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 13,
+   "source": [
+    "# Minibatches, shapes of Dense Layers\n",
+    "\n",
+    "N, n_features = 8, 10\n",
+    "tf.random.set_seed(10)\n",
+    "x = tf.random.normal(shape = (N, n_features))\n",
+    "\n",
+    "dense = Dense(units=1, activation = 'relu')\n",
+    "y = dense(x)\n",
+    "W, b = dense.get_weights()\n",
+    "\n",
+    "print('shape of x: ', x.shape)\n",
+    "print('shape of W:', W.shape)\n",
+    "print('Shape of b:',  b.shape)\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "shape of x:  (8, 10)\n",
+      "shape of W: (10, 1)\n",
+      "Shape of b: (1,)\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "source": [
+    "## output calculations\n",
+    "\n",
+    "N, n_features = 8, 10\n",
+    "tf.random.set_seed(10)\n",
+    "x = tf.random.normal(shape = (N, n_features))\n",
+    "\n",
+    "dense = Dense(units=1, activation = 'sigmoid')\n",
+    "y_tf = dense(x)\n",
+    "W, b = dense.get_weights()\n",
+    "\n",
+    "\n",
+    "y_man = tf.linalg.matmul(x, W) + b\n",
+    "y_man = 1 / (1 + tf.math.exp(-y_man))\n",
+    "\n",
+    "print('Output(tensorflow) : {}\\n{}'.format(y_tf.shape, y_tf.numpy()))\n",
+    "print('Output(manual) : {}\\n{}'.format(y_man.shape, y_man.numpy()))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Output(tensorflow) : (8, 1)\n",
+      "[[0.46854386]\n",
+      " [0.5895974 ]\n",
+      " [0.10466993]\n",
+      " [0.8744323 ]\n",
+      " [0.7818612 ]\n",
+      " [0.47610277]\n",
+      " [0.33888918]\n",
+      " [0.7424137 ]]\n",
+      "Output(manual) : (8, 1)\n",
+      "[[0.46854386]\n",
+      " [0.5895974 ]\n",
+      " [0.10466997]\n",
+      " [0.8744324 ]\n",
+      " [0.7818612 ]\n",
+      " [0.4761027 ]\n",
+      " [0.33888912]\n",
+      " [0.7424137 ]]\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
