--- a/dl_study/denselayer.ipynb
+++ b/dl_study/denselayer.ipynb
@@ -323,6 +323,21 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "## 교차엔트로피\n",
+    "## MSE \n",
+    "## 평균오차제곱함수\n",
+    "\n",
+    "# softmax\n",
+    "## 교차엔트로피는 분류(원핫 인코딩을 안한 것에 대해 지원한다)\n",
+    "## "
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
