--- a/dl_study/mlp_feddforward.ipynb
+++ b/dl_study/mlp_feddforward.ipynb
@@ -9,9 +9,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
-    "import numpy as np "
+    "import numpy as np \n",
+    "import pandas as pd "
    ],
    "outputs": [],
    "metadata": {}
